--- a/debian/changelog
+++ b/debian/changelog
@@ -32,6 +32,8 @@ dpkg (1.15.5) UNRELEASED; urgency=low
   * Generate the autoconf version from git to make it easier to see when a
     snapshot version is being used.
   * Add infrastructure for doxygen, for now not installed anywhere.
+  * Allow overriding the pkg-config path to ease cross-compilation.
+    Suggested by Tollef Fog Heen <tfheen@err.no>.
 
   [ Raphaël Hertzog ]
   * Add versioned dependency on base-files (>= 5.0.0) to dpkg-dev to ensure
