Fix spelling errors in the Catalan translation
Closes: #553328

Reported-by: Robert Millan <rmh.iesmontserrat@gmail.com>

--- a/po/ca.po
+++ b/po/ca.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.15.1\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-09-06 09:04+0200\n"
-"PO-Revision-Date: 2009-05-22 22:57+0200\n"
+"PO-Revision-Date: 2009-10-30 13:58+0100\n"
 "Last-Translator: Jordi Mallach <jordi@debian.org>\n"
 "Language-Team: Catalan <debian-l10n-catalan@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -752,12 +752,12 @@ msgstr "valor duplicat en el camp «%s»"
 #: lib/dpkg/parse.c:231
 #, c-format
 msgid "user-defined field name `%.*s' too short"
-msgstr "el nom de camp definit pel usuari «%.*s» és massa curt"
+msgstr "el nom de camp definit per l'usuari «%.*s» és massa curt"
 
 #: lib/dpkg/parse.c:237
 #, c-format
 msgid "duplicate value for user-defined field `%.*s'"
-msgstr "valor duplicat pel camp definit pel usuari «%.*s»"
+msgstr "valor duplicat pel camp definit per l'usuari «%.*s»"
 
 #: lib/dpkg/parse.c:251
 msgid "several package info entries found, only one allowed"
@@ -3966,12 +3966,12 @@ msgstr ""
 #: dpkg-deb/build.c:260
 #, fuzzy, c-format
 msgid "'%s' contains user-defined Priority value '%s'"
-msgstr "avís, «%s» conté un valor Priority «%s» definit pel usuari\n"
+msgstr "avís, «%s» conté un valor Priority «%s» definit per l'usuari\n"
 
 #: dpkg-deb/build.c:268
 #, fuzzy, c-format
 msgid "'%s' contains user-defined field '%s'"
-msgstr "avís, «%s» conté un camp «%s» definit pel usuari\n"
+msgstr "avís, «%s» conté un camp «%s» definit per l'usuari\n"
 
 #: dpkg-deb/build.c:273
 msgid "(upstream) version"
