Fix grammatical error

--- a/man/po/fr.po
+++ b/man/po/fr.po
@@ -2101,7 +2101,7 @@ msgid ""
 msgstr ""
 "Ce fichier contient des directives, une par ligne. Les mises en page et "
 "autres espaces ainsi que ce qui suit le caractère B<\"#\"> sont sautés, et "
-"les lignes vides seront ignorés."
+"les lignes vides seront ignorées."
 
 #. type: Plain text
 #: deb-triggers.5:18
