Add changelog entry for Dpkg::Changelog changes

--- a/debian/changelog
+++ b/debian/changelog
@@ -48,6 +48,9 @@ dpkg (1.15.5) UNRELEASED; urgency=low
       about fields allowed in various types of control information
       (and can be customized by each vendor). It also integrates
       information that was previously available through Dpkg::Deps.
+    - Dpkg::Changelog has been split in multiple modules and largely
+      modified to offer an interface that is now more in line with the
+      other modules.
   * All dpkg-* perl programs that work with control information have been
     updated to use the new Dpkg::Control interface.
   * Create Launchpad-Bugs-Fixed directly in the changelog parsing code thanks
