--- a/debian/changelog
+++ b/debian/changelog
@@ -10,7 +10,7 @@ dpkg (1.15.5) UNRELEASED; urgency=low
     newer, and always verbose when building the Debian packages.
   * Fix small leak when parsing ‘--ignore-depends’ option values.
   * When start-stop-daemon fails to set the io scheduling warn instead of
-    finishing fatally.
+    finishing fatally. Closes: #553580
   * Update md5 file paths in debian/copyright.
     Thanks to Jonathan Nieder <jrnieder@gmail.com>.
   * On ‘dpkg-trigger --help’ print the default admindir instead of the one
