Add missing bug closure.

--- a/debian/changelog
+++ b/debian/changelog
@@ -53,6 +53,8 @@ dpkg (1.15.5) UNRELEASED; urgency=low
       other modules.
   * All dpkg-* perl programs that work with control information have been
     updated to use the new Dpkg::Control interface.
+    In this process, dpkg-scanpackages has been fixed to not skip non-standard
+    fields. Closes: #494136
   * Create Launchpad-Bugs-Fixed directly in the changelog parsing code thanks
     to a new vendor hook post-process-changelog-entry. Closes: #536066
   * Integrate dpkg-ftp into dselect. Add the required Replaces and Conflicts.
