--- a/debian/changelog
+++ b/debian/changelog
@@ -69,6 +69,9 @@ dpkg (1.15.5) UNRELEASED; urgency=low
     dpkg-dev → xz-utils to ensure xz and unxz are available.
   * Fix dpkg-source --include-binaries to correctly compute the path name of
     the discovered binary files. Closes: #554612
+  * Remove extra quoting that should not be there while passing an exclude
+    file to git ls-files during build of 3.0 (git) source package.
+    Thanks to Courtney Bane for the patch. Closes: #551829
 
   [ Updated dpkg translations ]
   * Czech (Miroslav Kure).
