dpkg-source: optimize diffing phase of a source package build
Optimize dpkg-source -b by avoiding many diff calls when not required.

Based-on-patch-by: Mike Hommey <mh@glandium.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -72,6 +72,8 @@ dpkg (1.15.5) UNRELEASED; urgency=low
   * Remove extra quoting that should not be there while passing an exclude
     file to git ls-files during build of 3.0 (git) source package.
     Thanks to Courtney Bane for the patch. Closes: #551829
+  * Optimize dpkg-source -b by avoiding many diff calls when not required.
+    Thanks to Mike Hommey for the idea. Closes: #554689
 
   [ Updated dpkg translations ]
   * Czech (Miroslav Kure).
