dpkg-source: read sticky options from <dir>/debian/source/options
Modify dpkg-source -b/--print-format to use default build options from
debian/source/options. Thus it's now possible to have sticky options, for
example for the choice of a compression method (-Z<comp>).

The options read from that file are printed in the log to better diagnose
errors that might appear from its usage.

--- a/debian/changelog
+++ b/debian/changelog
@@ -78,6 +78,9 @@ dpkg (1.15.5) UNRELEASED; urgency=low
     Thanks to Mike Hommey for the idea. Closes: #554689
   * Add new option --print-format to dpkg-source to be able to know by advance
     the source format that would be used during a build.
+  * Modify dpkg-source -b to use default build options from
+    debian/source/options. Thus it's now possible to have sticky options, for
+    example for the choice of a compression method (-Z<comp>).
 
   [ Updated dpkg translations ]
   * Czech (Miroslav Kure).
