dpkg-source: add a DEP-3 compliant header to automatic patches
In "3.0 (quilt)" format, dpkg-source can automatically create patches with
the upstream changes applied to the source package. Those patches will now
contain an informative header respecting the DEP-3 proposal where the
Description contains a copy of the last changelog entry, the last uploader
is mentionned in the Author field. Supplementary fields can be added
by a vendor hook "extend-patch-header". The Debian implementation of this
hook automatically adds Bug-Debian and Bug-Ubuntu entries.

Dpkg::Source::Patch has been modified to be able to output a preliminary
header.

--- a/debian/changelog
+++ b/debian/changelog
@@ -85,6 +85,8 @@ dpkg (1.15.5) UNRELEASED; urgency=low
     (applies only to source packages using format 1.0). Closes: #482166
     It also recommends usage of 3.0 (quilt) format during dpkg-source -b if it
     detects changes to upstream files that are stored in the .diff.gz.
+  * Add DEP-3 compliant headers to automatic patches created by dpkg-source
+    in 3.0 (quilt) source format. Closes: #543581
 
   [ Updated dpkg translations ]
   * Czech (Miroslav Kure).
