Use source format "3.0 (native)" with bzip2 compression for dpkg itself

--- a/debian/changelog
+++ b/debian/changelog
@@ -87,6 +87,7 @@ dpkg (1.15.5) UNRELEASED; urgency=low
     detects changes to upstream files that are stored in the .diff.gz.
   * Add DEP-3 compliant headers to automatic patches created by dpkg-source
     in 3.0 (quilt) source format. Closes: #543581
+  * Switch dpkg to source format "3.0 (native)" with bzip2 compression.
 
   [ Updated dpkg translations ]
   * Czech (Miroslav Kure).
