Update German translation of manual pages
Update to 1656t.

--- a/man/po/de.po
+++ b/man/po/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2009-09-06 09:05+0300\n"
-"PO-Revision-Date: 2009-10-29 20:09+0100\n"
+"PO-Revision-Date: 2009-11-11 20:38+0100\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -9675,6 +9675,22 @@ msgstr ""
 "Quellpaketformate werden im Abschnitt B<QUELLPAKET-FORMATE> ausführlich "
 "beschrieben."
 
+#: dpkg-source.1:65
+#, no-wrap
+msgid "B<--print-format> I<directory>"
+msgstr "B<--print-format> I<Verzeichnis>"
+
+# type: Plain text
+#: dpkg-source.1:70
+msgid ""
+"Print the source format that would be used to build the source package if "
+"B<dpkg-source -b >I<directory> was called (in the same conditions and with "
+"the same options)."
+msgstr ""
+"Gibt das Quellformat aus, dass zum Bau des Quellpakets verwandt würde, falls "
+"B<dpkg-source -b >I<Verzeichnis> aufgerufen würde (unter den gleichen "
+"Bedingungen und mit den gleichen Optionen)."
+
 #. type: SH
 #: dpkg-source.1:72
 #, no-wrap
@@ -9952,6 +9968,20 @@ msgstr ""
 #, no-wrap
 msgid "SOURCE PACKAGE FORMATS"
 msgstr "QUELLPAKET-FORMATE"
+
+# type: Plain text
+#: dpkg-source.1:204
+msgid ""
+"If you don't know what source format you should use, you should probably "
+"pick either \"3.0 (quilt)\" or \"3.0 (native)\". They will become the "
+"default formats in the near future. See http://wiki.debian.org/Projects/"
+"DebSrc3.0 for information on the deployment of those formats within Debian."
+msgstr ""
+"Falls Sie nicht wissen, welches Quellformat Sie verwenden sollen, verwenden "
+"Sie wahrscheinlich am besten entweder »3.0 (quilt)« oder »3.0 (native)«. Sie "
+"werden in der nahen Zukunft die Standardformate werden. Lesen Sie http://wiki."
+"debian.org/Projects/DebSrc3.0 für Informationen über den Einsatz dieser "
+"Formate innerhalb von Debian."
 
 #. type: SS
 #: dpkg-source.1:193
@@ -10730,6 +10760,36 @@ msgstr ""
 "Debian-Tarball aufgenommen werden sollen. Leerzeichen am Anfang und Ende der "
 "Zeile werden entfernt. Zeilen, die mit »#« anfangen, sind Kommentare und "
 "werden übersprungen. Leere Zeilen werden ignoriert."
+
+#: dpkg-source.1:511
+#, no-wrap
+msgid "debian/source/options"
+msgstr "debian/source/options"
+
+# type: Plain text
+#: dpkg-source.1:516
+msgid ""
+"This file contains a list of options that should be automatically prepended "
+"to the set of command line options of a B<dpkg-source -b> or B<dpkg-source --"
+"print-format> call. Options like B<-Z> and B<-z> are well suited for this "
+"file."
+msgstr ""
+"Diese Datei enhält eine Liste an Optionen, die automatisch vor den Satz an "
+"Befehlszeilenoptionen bei einem Aufruf B<dpkg-source -b> oder B<dpkg-source --"
+"print-format> gesetzt werden sollen. Optionen wie B<-Z> und B<-z> sind für "
+"diese Datei gut geeignet."
+
+# type: Plain text
+#: dpkg-source.1:520
+msgid ""
+"Each option should be put on a separate line. Empty lines and lines starting "
+"with \"#\" are ignored. B<--format> options are not accepted in this file, "
+"you should use B<debian/source/format> instead."
+msgstr ""
+"Jede Option sollte auf einer separaten Zeile stehen. Leerzeilen und Zeilen, "
+"die mit »#« beginnen, werden ignoriert. B<--format>-Optionen werden in dieser "
+"Datei nicht akzeptiert, Sie sollten stattdessen B<debian/source/format> "
+"verwenden."
 
 #. type: SS
 #: dpkg-source.1:499
