man: Add new deb-split.5 manual page

--- a/debian/changelog
+++ b/debian/changelog
@@ -33,6 +33,7 @@ dpkg (1.15.6) UNRELEASED; urgency=low
     which now makes it fatal, as was intended originally. This should not
     cause problems for anything using dpkg-dev to build packages as those
     are already fatal on that case.
+  * Add new deb-split(5) man page.
 
   [ Updated dpkg translations ]
   * French (Christian PERRIER).
