--- a/scripts/po/sv.po
+++ b/scripts/po/sv.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.15.1\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-11-13 12:18+0100\n"
-"PO-Revision-Date: 2009-10-14 07:56+0100\n"
+"PO-Revision-Date: 2009-11-13 13:10+0100\n"
 "Last-Translator: Peter Krefting <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -199,7 +199,7 @@ msgid ""
 "      --version  show the version.\n"
 msgstr ""
 "\n"
-"Använd: %s [<flaggor> ...]\n"
+"Användning: %s [<flaggor> ...]\n"
 "\n"
 "Flaggor:\n"
 "  -r<få-root-kommando>\n"
@@ -414,7 +414,7 @@ msgid ""
 "                 change the administrative directory.\n"
 "  -h             show this help message.\n"
 msgstr ""
-"Använd: %s [<flagga> ...] [<control-fil>]\n"
+"Användning: %s [<flagga> ...] [<control-fil>]\n"
 "\n"
 "Flaggor:\n"
 "  control-fil    control-fil att behandla (standard: debian/control).\n"
@@ -460,7 +460,7 @@ msgid ""
 "  -h, --help               show this help message.\n"
 "      --version            show the version.\n"
 msgstr ""
-"Använd: %s [<flagga>...] <filnamn> <sektion> <prioritet>\n"
+"Användning: %s [<flagga>...] <filnamn> <sektion> <prioritet>\n"
 "\n"
 "Flaggor:\n"
 "  -f<fillistfil>           skriver filer här istället för debian/files.\n"
@@ -540,7 +540,7 @@ msgid ""
 "  -h, --help               show this help message.\n"
 "      --version            show the version.\n"
 msgstr ""
-"Använd: %s [<flagga> ...]\n"
+"Användning: %s [<flagga> ...]\n"
 "\n"
 "Flaggor:\n"
 "  -b                       bygg endast binärer - inga källkodsfiler.\n"
@@ -741,7 +741,7 @@ msgid ""
 "  -h, --help               show this help message.\n"
 "      --version            show the version.\n"
 msgstr ""
-"Använd: %s [<flagga> ...]\n"
+"Användning: %s [<flagga> ...]\n"
 "\n"
 "Flaggor:\n"
 "  -p<paket>                skriv styrfil för paket.\n"
@@ -946,7 +946,7 @@ msgstr "använde ingen debian/symbols-fil som grund för att generera %s"
 #: scripts/dpkg-name.pl:51
 #, perl-format
 msgid "Usage: %s [<option>...] <file>...\n"
-msgstr "Använd: %s [<flagga>...] <fil>...\n"
+msgstr "Användning: %s [<flagga>...] <fil>...\n"
 
 #: scripts/dpkg-name.pl:53
 msgid ""
@@ -1045,7 +1045,7 @@ msgid ""
 "                                <number> is lower than 0)\n"
 "    --all                       include all changes\n"
 msgstr ""
-"Använd: %s [<flagga> ...]\n"
+"Användning: %s [<flagga> ...]\n"
 "\n"
 "Flaggor:\n"
 "  -l<ändringsloggfil>      hämta information per version från fil.\n"
@@ -1097,7 +1097,7 @@ msgid ""
 "  -h, --help               show this help message.\n"
 "      --version            show the version.\n"
 msgstr ""
-"Använd: %s [<flagga> ...] <binärkatalog> [<överstyrfil> [<sökvägprefix>]] > "
+"Användning: %s [<flagga> ...] <binärkatalog> [<överstyrfil> [<sökvägprefix>]] > "
 "Packages\n"
 "\n"
 "Flaggor:\n"
@@ -1157,9 +1157,9 @@ msgid "`dpkg-deb -I %s control' exited with %d, skipping package"
 msgstr "\"dpkg-deb -l %s control\" avslutades med %d, hoppar över paket"
 
 #: scripts/dpkg-scanpackages.pl:207
-#, fuzzy, perl-format
+#, perl-format
 msgid "couldn't parse control information from %s."
-msgstr "Kunde inte tolka dynamisk relokeringspost: %s"
+msgstr "Kunde inte tolka styrinformation från %s."
 
 #: scripts/dpkg-scanpackages.pl:210
 #, perl-format
@@ -1174,7 +1174,7 @@ msgstr "Paketet (%s) (filnamn %s) repeterades men nyare version;"
 #: scripts/dpkg-scanpackages.pl:220
 #, perl-format
 msgid "used that one and ignored data from %s!"
-msgstr "använde·den·och·ignorerade·data·från·%s!"
+msgstr "använde den och ignorerade data från %s!"
 
 #: scripts/dpkg-scanpackages.pl:224
 #, perl-format
@@ -1184,7 +1184,7 @@ msgstr "Paketet (%s) (filnamn %s) repeterades;"
 #: scripts/dpkg-scanpackages.pl:225
 #, perl-format
 msgid "ignored that one and using data from %s!"
-msgstr "ignorerade·den·och·använde·data·från·%s!"
+msgstr "ignorerade den och använde data från %s!"
 
 #: scripts/dpkg-scanpackages.pl:231
 #, perl-format
@@ -1240,7 +1240,7 @@ msgid ""
 "\n"
 "See the man page for the full documentation.\n"
 msgstr ""
-"Använd: %s [<flagga> ...] <binarkatalog> [<överstyrfil> [<sökvägprefix>]] > "
+"Användning: %s [<flagga> ...] <binarkatalog> [<överstyrfil> [<sökvägprefix>]] > "
 "Sources\n"
 "\n"
 "Flaggor:\n"
@@ -1453,7 +1453,7 @@ msgid ""
 "Dependency fields recognised are:\n"
 "  %s\n"
 msgstr ""
-"Använd: %s [<flagga> ...] <binär>|-e<binär> [<flagga> ...]\n"
+"Användning: %s [<flagga> ...] <binär>|-e<binär> [<flagga> ...]\n"
 "\n"
 "Positionsberoende flaggor (ordningen har betydelse):\n"
 "  <binär>                  ta med beroenden för <binär>,\n"
@@ -1532,9 +1532,9 @@ msgid "unknown output from dpkg --search: '%s'"
 msgstr "okända utdata från dpkg --search: \"%s\""
 
 #: scripts/dpkg-source.pl:89
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s needs a directory"
-msgstr "-b behöver en katalog"
+msgstr "%s behöver en katalog"
 
 #: scripts/dpkg-source.pl:92
 #, perl-format
@@ -1547,9 +1547,9 @@ msgid "directory argument %s is not a directory"
 msgstr "katalogargumentet %s är inte en katalog"
 
 #: scripts/dpkg-source.pl:104
-#, fuzzy, perl-format
+#, perl-format
 msgid "using options from %s: %s"
-msgstr "fel vid läsning från %s: %s"
+msgstr "använder flaggor från %s: %s"
 
 #: scripts/dpkg-source.pl:118 scripts/Dpkg/Source/Compressor.pm:34
 #, perl-format
@@ -1639,9 +1639,8 @@ msgid "extracting %s in %s"
 msgstr "extraherar %s i %s"
 
 #: scripts/dpkg-source.pl:379
-#, fuzzy
 msgid "only one of -x, -b or --print-format allowed, and only once"
-msgstr "endast en av -x och -b tillåts, och endast en gång"
+msgstr "endast en av -x, -b och --print-format tillåts, och endast en gång"
 
 #: scripts/dpkg-source.pl:387
 msgid ""
@@ -1665,9 +1664,17 @@ msgid ""
 "  --print-format <dir>     print the source format that would be\n"
 "                           used to build the source package."
 msgstr ""
+"Användning: %s [<flagga> ...] <kommando>\n"
+"\n"
+"Kommandon:\n"
+"  -x <filnamn>.dsc [<utdatakatalog>]\n"
+"                           extrahera källkodspaket.\n"
+"  -b <kat>                 bygg källkodspaket.\n"
+"  --print-format <kat>     visa källkodsformatet som skulle användas\n"
+"                           för att bygga källkodspaketet."
 
 #: scripts/dpkg-source.pl:408
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "Build options:\n"
 "  -c<controlfile>          get control info from this file.\n"
@@ -1687,17 +1694,10 @@ msgid ""
 "  -z<level>                compression level to use (defaults to '%d',\n"
 "                             supported are: '1'-'9', 'best', 'fast')"
 msgstr ""
-"Använd: %s [<flagga> ...] <kommando>\n"
-"\n"
-"Kommandon:\n"
-"  -x <filnamn>.dsc [<utdatakatalog>]\n"
-"                           extrahera källkodspaket.\n"
-"  -b <kat>                 bygg källkodspaket.\n"
-"\n"
 "Byggflaggor:\n"
 "  -c<styrfil>              hämta styrinfo från filen.\n"
 "  -l<ändringsloggfil>      hämta per version-information från denna fil.\n"
-"  -F<ändringsloggformat>   tvinga ändringsloggsformat.\n"
+"  -F<ändringsloggformat>   tvinga ändringsloggformat.\n"
 "  -V<namn>=<värde>         sätt en substitueringsvariabel.\n"
 "  -T<varlistfil>           läs variabler här.\n"
 "  -D<fält>=<värde>         överstyr eller lägg till ett .dsc-fält och "
@@ -1714,20 +1714,7 @@ msgstr ""
 "                           %s).\n"
 "  -z<nivå>                 komprimeringsnivå att använda (standardvärde är\n"
 "                           \"%d\", värden som stöds är: \"1\"-\"9\", \"best"
-"\", \"fast\")\n"
-"\n"
-"Flaggor för uppackning:\n"
-"  --no-copy                kopiera inte .orig-tarbollar\n"
-"  --no-check               kontrollera inte signaturere och kontrollsummor\n"
-"                           före uppackning\n"
-"  --require-valid-signature avbryt om paketet saknar giltig signatur\n"
-"\n"
-"Allmänna flaggor:\n"
-"  -h, --help               visa detta hjälpmeddelande.\n"
-"      --version            visa versionsnummer.\n"
-"\n"
-"Ytterligare flaggor finns, men de beror på källkodspaketformatet.\n"
-"Se dpkg-source(1) för vidare information.\n"
+"\", \"fast\")"
 
 #: scripts/dpkg-source.pl:426
 msgid ""
@@ -1738,26 +1725,30 @@ msgid ""
 "  --require-valid-signature abort if the package doesn't have a valid "
 "signature"
 msgstr ""
+"Flaggor för uppackning:\n"
+"  --no-copy                kopiera inte .orig-tarbollar\n"
+"  --no-check               kolla inte signatur och kontrollsumma före "
+"uppackning\n"
+"  --require-valid-signature avbryt om paketet saknar giltig signatur"
+""
 
 #: scripts/dpkg-source.pl:431
-#, fuzzy
 msgid ""
 "General options:\n"
 "  -h, --help               show this help message.\n"
 "      --version            show the version."
 msgstr ""
-"Använd: %s [<flagga>...] <filnamn> <sektion> <prioritet>\n"
-"\n"
-"Flaggor:\n"
-"  -f<fillistfil>           skriver filer här istället för debian/files.\n"
+"Allmänna flaggor:\n"
 "  -h, --help               visa detta hjälpmeddelande.\n"
-"      --version            visa versionsnummer.\n"
+"      --version            visa versionsnummer."
 
 #: scripts/dpkg-source.pl:435
 msgid ""
 "More options are available but they depend on the source package format.\n"
 "See dpkg-source(1) for more info."
 msgstr ""
+"Ytterligare flaggor finns, men de beror på källkodspaketformatet.\n"
+"Se dpkg-source(1) för vidare information."
 
 #: scripts/changelog/debian.pl:36
 msgid ""
@@ -1797,7 +1788,7 @@ msgid ""
 "                                <number> is lower than 0)\n"
 "    --all                       include all changes\n"
 msgstr ""
-"Använd: %s [<flagga>...] [<ändringsloggfil>]\n"
+"Användning: %s [<flagga>...] [<ändringsloggfil>]\n"
 "\n"
 "Flaggor:\n"
 "    --help, -h                  visa detta hjälpmeddelanden    --version, -"
@@ -1881,7 +1872,7 @@ msgstr "%s(l%s): %s"
 
 #: scripts/Dpkg/Changelog.pm:224
 msgid "'offset' without 'count' has no effect"
-msgstr ""
+msgstr "\"offset\" utan \"count\" har ingen effekt"
 
 #: scripts/Dpkg/Changelog.pm:232
 msgid "you can't combine 'count' or 'offset' with any other range option"
@@ -1930,20 +1921,19 @@ msgstr "\"until\"-flaggan anger den äldsta versionen, ignorerar"
 
 #: scripts/Dpkg/Changelog/Debian.pm:50
 msgid "first heading"
-msgstr ""
+msgstr "första rubrik"
 
 #: scripts/Dpkg/Changelog/Debian.pm:51
 msgid "next heading or eof"
-msgstr ""
+msgstr "nästa rubrik eller filslut"
 
 #: scripts/Dpkg/Changelog/Debian.pm:52
-#, fuzzy
 msgid "start of change data"
-msgstr "utdata från ändringsloggparser"
+msgstr "början på ändringsdata"
 
 #: scripts/Dpkg/Changelog/Debian.pm:53
 msgid "more change data or trailer"
-msgstr ""
+msgstr "mer ändringsdata eller fot"
 
 #: scripts/Dpkg/Changelog/Debian.pm:85
 #, perl-format
@@ -1994,18 +1984,18 @@ msgid "repeated key-value %s"
 msgstr "repeterat nyckelvärde %s"
 
 #: scripts/Dpkg/Changelog/Entry/Debian.pm:126
-#, fuzzy, perl-format
+#, perl-format
 msgid "badly formatted urgency value: %s"
-msgstr "felaktigt formaterat värde för \"urgency\""
+msgstr "felaktigt formaterat värde för \"urgency\": %s"
 
 #: scripts/Dpkg/Changelog/Entry/Debian.pm:130
-#, fuzzy, perl-format
+#, perl-format
 msgid "unknown key-value %s"
-msgstr "okänt nyckelvärdenyckel %s - kopierar till XS-%s"
+msgstr "okänt nyckelvärde %s"
 
 #: scripts/Dpkg/Changelog/Entry/Debian.pm:134
 msgid "the header doesn't match the expected regex"
-msgstr ""
+msgstr "huvudet motsvarar inte det förväntat reguljärt uttryck"
 
 #: scripts/Dpkg/Changelog/Entry/Debian.pm:147
 #, perl-format
@@ -2014,7 +2004,7 @@ msgstr "kunde inte tolka datumet %s"
 
 #: scripts/Dpkg/Changelog/Entry/Debian.pm:150
 msgid "the trailer doesn't match the expected regex"
-msgstr ""
+msgstr "filslutet motsvarar inte det förväntat reguljärt uttryck"
 
 #: scripts/Dpkg/Changelog/Parse.pm:102
 #, perl-format
@@ -2087,9 +2077,9 @@ msgstr ""
 "Filen %s har kontrollsumman %s istället för den förväntade %s (algoritm %s)"
 
 #: scripts/Dpkg/Conf.pm:102
-#, fuzzy, perl-format
+#, perl-format
 msgid "invalid syntax for option in %s, line %d"
-msgstr "syntaxfel i %s på rad %d: %s"
+msgstr "syntaxfel för flagga i %s, rad %d"
 
 #: scripts/Dpkg/Control.pm:146
 msgid "general section of control info file"
@@ -2707,7 +2697,7 @@ msgstr "tillämpar %s"
 #: scripts/Dpkg/Source/Package/V1.pm:146
 #, perl-format
 msgid "upstream files that have been modified: %s"
-msgstr ""
+msgstr "uppströmsfiler som har ändrats: %s"
 
 #: scripts/Dpkg/Source/Package/V1.pm:156
 msgid "only supports gzip compression"
@@ -2846,13 +2836,15 @@ msgstr "kan inte se om existerande originalkatalog \"%s\" finns"
 #: scripts/Dpkg/Source/Package/V1.pm:354
 #, perl-format
 msgid "the diff modifies the following upstream files: %s"
-msgstr ""
+msgstr "diffen modifierar följande uppströmsfiler: %s"
 
 #: scripts/Dpkg/Source/Package/V1.pm:356
 msgid ""
 "use the '3.0 (quilt)' format to have separate and documented changes to "
 "upstream files, see dpkg-source(1)"
 msgstr ""
+"använd formatet \"3.0 (quilt)\" för att ha separata och dokumenterade "
+"ändringar på uppströmsfiler, se dpkg-source(1)"
 
 #: scripts/Dpkg/Source/Package/V1.pm:374
 #, perl-format
@@ -3295,7 +3287,7 @@ msgstr "epokdelen av versionsnumret är inte ett tal: \"%s\""
 #~ msgstr "felaktiga md5-utdata för %s (%s)"
 
 #~ msgid "Usage: 822-date"
-#~ msgstr "Använd: 822-date"
+#~ msgstr "Användning: 822-date"
 
 #~ msgid "This program is deprecated. Please use 'date -R' instead."
 #~ msgstr "Detta program rekommenderas ej. Använd \"date -R\" istället."
